# GPU_KCF

./: CMakeLists.txt  README.md
src/: SetupSurface.cpp  fhog.cpp  kcftracker.cpp  kcftracker.hpp  main.cpp  profiler.cpp  profiler.hpp  recttools.hpp  tracker.h
